apps/monitoring/base/prometheus-strip-prefix-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: prometheus-strip-prefix
spec:
  stripPrefix:
    prefixes:
      - /prometheus
