apps/monitoring/base/grafana-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`testpi1.local`) && PathPrefix(`/grafana`)
      services:
        - name: grafana
          port: 3000
  tls:
    certResolver: default
