apps/monitoring/base/ingressroute-grafana.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-ingressroute-https
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`nerdd.univie.ac.at`) && PathPrefix(`/grafana`)
      services:
        - name: grafana
          port: 3000
  tls:
    certResolver: default
