apps/monitoring/base/ingressroute-prometheus.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`dev-nerdd.univie.ac.at`) && PathPrefix(`/prometheus`)
      kind: Rule
      services:
        - name: prometheus-k8s
          port: 9090
